# recompression

./: .gitignore  CMakeLists.txt  COPYING  README.md  file_walker.cmake
bench/: CMakeLists.txt  bcomp_bench.cpp  compression_statistics_bench.cpp  download_data.sh  fast_bcomp_bench.cpp  fast_pcomp_bench.cpp  fast_recomp_bench.cpp  lce_query_bench.cpp  long_lce_query_bench.cpp  malloc_count.c  parallel_bcomp_bench.cpp  parallel_pcomp_bench.cpp  parallel_recomp_bench.cpp  pcomp_bench.cpp  radix_sort_bench.cpp  random_access_bench.cpp  recomp_bench.cpp  recompression_all_bench.cpp  recompression_bench.cpp  recompression_mem_bench.cpp  remove_zeroes_bench.cpp  scale_recompression_bench.cpp  statistics_bench.cpp  store_rlslp_bench.cpp  strong_scale_recompression_bench.cpp  weak_scale_recompression_bench.cpp
bench/figures/: .gitignore  benchmark_bcomp.tex  benchmark_bcomp_l0.tex  benchmark_bcomp_l2.tex  benchmark_bcomp_l4.tex  benchmark_pcomp.tex  benchmark_pcomp_l1.tex  benchmark_pcomp_l3.tex  benchmark_pcomp_l5.tex  benchmark_recomp.tex  radix_sort.tex
bench/results/: .gitignore  bcomp.tex  bcomp.txt  bcomp_bench.txt  bcomp_bench_sort.txt  bench_recomp.txt  benchmark_bcomp.tex  benchmark_pcomp.tex  fast_bcomp_bench.txt  naive_b_p_comp_bench.txt  naive_bcomp_bench.txt  old_bcomp_bench_sort.txt  old_pcomp_bench_sort.txt  pcomp_bench.txt  pcomp_bench_sort.txt  radix_sort.txt  radix_sort_old.txt
bench/results_old/: .gitignore  NaiveRecompTtoG_bench.txt  bench_bcomp.txt  bench_recomp.txt  bench_recomp_ips4o.txt  compare_sort.txt  naive_b_p_comp_bench.txt  pcomp_part_bench.txt  radix_hist.txt  radix_sort_test.txt  recompression_bench.txt
ci/: file_walker.py  gen_sources.py
ci/cpplint/: cpplint.py
cmakemodules/: Build.cmake  Dependency.cmake  DownloadCelero.cmake  DownloadDYNAMIC.cmake  DownloadGTest.cmake  DownloadGlog.cmake  DownloadIPS4o.cmake  DownloadKahip.cmake  DownloadPrezzalce.cmake  DownloadSDSL.cmake  Downloadsparsepp.cmake  Downloadtlx.cmake  FindCelero.cmake  FindDYNAMIC.cmake  FindGTest.cmake  FindGlog.cmake  FindIPS4o.cmake  FindKahip.cmake  FindPrezzalce.cmake  FindSDSL.cmake  Findsparsepp.cmake  Findtlx.cmake
cmakemodules/ips4o/: CMakeLists.txt
docs/: CMakeLists.txt  Doxyfile.in  namespaces.hpp
include/: defs.hpp  fast_recompression.hpp  full_parallel_recompression.hpp  lce_query.hpp  parallel_fast_recompression.hpp  parallel_lp_recompression.hpp  parallel_order_great_recompression.hpp  parallel_order_less_recompression.hpp  parallel_recompression.hpp  parallel_rnd_recompression.hpp  partition.hpp  radix_sort.hpp  recompression.hpp  recompression_hash.hpp  rlslp.hpp  sequential_recompression.hpp  util.hpp
include/coders/: coder.hpp  delta_coder.hpp  plain_rlslp_coder.hpp  plain_rlslp_wlz_coder.hpp  rlslp_coder.hpp  rlslp_dr_coder.hpp  rlslp_rule_sorter.hpp
include/io/: bitistream.hpp  bitostream.hpp
include/recompression/: defs.hpp  fast_recompression.hpp  full_parallel_recompression.hpp  graph.hpp  hash_recompression.hpp  lce_query.hpp  parallel_gr_recompression.hpp  parallel_grz_recompression.hpp  parallel_lock_recompression.hpp  parallel_lp_recompression.hpp  parallel_ls3_recompression.hpp  parallel_ls5_recompression.hpp  parallel_ls_gain_recompression.hpp  parallel_ls_recompression.hpp  parallel_order_great_recompression.hpp  parallel_order_less_recompression.hpp  parallel_recompression.hpp  parallel_rnd100_recompression.hpp  parallel_rnd10_recompression.hpp  parallel_rnd50_recompression.hpp  parallel_rnd_recompression.hpp  parallel_rnddir_recompression.hpp  parallel_wrnd_recompression.hpp  radix_sort.hpp  recompression.hpp  rlslp.hpp  util.hpp
src/: defs.cpp  fast_recompression.cpp  full_parallel_recompression.cpp  lce_query.cpp  naive_parallel_recompression.cpp  naive_recompression.cpp  parallel_fast_recompression.cpp  parallel_lp_recompression.cpp  parallel_order_great_recompression.cpp  parallel_order_less_recompression.cpp  parallel_recompression.cpp  parallel_rnd_recompression.cpp  partition.cpp  radix_sort.cpp  recompression.cpp  recompression_hash.cpp  rlslp.cpp  sequential_recompression.cpp  util.cpp
src/coders/: coder.cpp  delta_coder.cpp  plain_rlslp_coder.cpp  plain_rlslp_wlz_coder.cpp  rlslp_coder.cpp  rlslp_dr_coder.cpp  rlslp_rule_sorter.cpp
src/io/: bitistream.cpp  bitostream.cpp
src/recompression/: defs.cpp  fast_recompression.cpp  full_parallel_recompression.cpp  graph.cpp  hash_recompression.cpp  lce_query.cpp  parallel_gr_recompression.cpp  parallel_grz_recompression.cpp  parallel_lock_recompression.cpp  parallel_lp_recompression.cpp  parallel_ls3_recompression.cpp  parallel_ls5_recompression.cpp  parallel_ls_gain_recompression.cpp  parallel_ls_recompression.cpp  parallel_order_great_recompression.cpp  parallel_order_less_recompression.cpp  parallel_recompression.cpp  rlslp.cpp  (+9 more)
test/: CMakeLists.txt  adj_list_test.cpp  bcomp_test.cpp  bitstream_test.cpp  derive_text_test.cpp  extract_test.cpp  fast_recomp_test.cpp  fast_recompression_test.cpp  full_parallel_recompression_test.cpp  lce_query_test.cpp  multiset_test.cpp  parallel_gr2_recompression_test.cpp  parallel_gr_alternate_recompression_test.cpp  parallel_gr_recompression_test.cpp  parallel_grz_recompression_test.cpp  parallel_kahip_recompression_test.cpp  parallel_lock_recompression_test.cpp  parallel_lp_recompression_test.cpp  parallel_ls3_recompression_test.cpp  parallel_ls5_recompression_test.cpp  parallel_ls_gain_recompression_test.cpp  parallel_ls_recompression_test.cpp  parallel_order_great_recompression_test.cpp  parallel_order_less_recompression_test.cpp  parallel_parhip_recompression_test.cpp  parallel_recompression_test.cpp  parallel_rnd100_recompression_test.cpp  parallel_rnd10_recompression_test.cpp  parallel_rnd50_recompression_test.cpp  parallel_rnd5_recompression_test.cpp  parallel_rnd_recompression_test.cpp  parallel_rnddir_recompression_test.cpp  parallel_wrnd_recompression_test.cpp  partition_test.cpp  pcomp_test.cpp  plain_fixed_rlslp_coder_test.cpp  plain_rlslp_coder_test.cpp  plain_rlslp_wlz_coder_test.cpp  radix_sort_test.cpp  recomp_test.cpp  (+10 more)
(+44 files in other folders)
